--- a/project_2/2_Model Selection and Tuning_revised.ipynb
+++ b/project_2/2_Model Selection and Tuning_revised.ipynb
@@ -605,7 +605,7 @@
      "output_type": "stream",
      "text": [
       " ridge regression score for new train set is 0.9221526630562795\n",
-      " ridge regression score for new test set is 0.9068074309365954\n",
+      " ridge regression score for new test set is 0.9068074309365955\n",
       " ridge RMSE score for test set is 24272.908724033663\n"
      ]
     }
@@ -760,6 +760,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We note that the optimal values of alphas obtained is smaller than the value obtained while doing feature elimination(32.176 for ridge and 524.12 for lasso). This be because with lesser features, there is less overfitting, and thus lesser regularization required."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -885,7 +892,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From our first round of iteration, Linear regression model appears to give very good results! One reason could be because of the number of features that we place in. We've limited ourselves to the top 30 features which would have a strong linear relationship to sale price.\n",
+    "From our first round of iteration, Linear regression model appears to give very good results! \n",
+    "* One reason could be because of the number of features that we place in. We've limited ourselves to the top 30 features which would have a strong linear relationship to sale price.\n",
+    "* The other reason is also due to the removal of multi-collinear features. Linear Regression performs well if features are non-collinear. Since we have performed feature elimination and also removed factors that are highly correlated, these fulfill assumptions for Linear Reg\n",
     "\n",
     "From this round, Lasso model seems to be giving the best results, with the highest Adjusted r2 score (tied with Linear), and with the lowest RMSE score (24501.9025)."
    ]
@@ -1665,7 +1674,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " linear regression r2 score for train poly set is 0.9236212659939264\n",
+      " linear regression r2 score for train poly set is 0.9236212659939262\n",
       " linear regression r2 score for test poly set is 0.9209827654967179\n",
       " linear regression adjusted r2 score for test poly set is 0.9162384594913449\n",
       " linear RMSE score for test poly set is 22350.74962690607\n",
@@ -2587,6 +2596,9 @@
    "metadata": {},
    "source": [
     "In conclusion, the graph below shows the top 30 features that impacts Sale Price. These features are good guidelines for homeowners looking to make self-improvements to their properties to increase value.\n",
+    "* Overall Quality and Total SF have an exponential effect that increases by 45799 in price for every unit that increases. These are very important features that dominate price influence\n",
+    "* Total Rooms above ground is the second most predictive factor, where an increase in one unit results in an increase of 6275 in price\n",
+    "* Have a new house is the third best predictive factor. Home owners are willing to pay more if the home is new as it is perceived to be in greater condition and more modern features and amenities. If the house is new, price can increase by 5732.\n",
     "\n",
     "In terms of price prediction, more could be done to improve the model's accuracy, such as \n",
     "* Being more sensitive to outliers rather than removing them, and experimenting with more polynomial features. This might include the need of experimenting further beyond linear regression models, such as Neural Networks\n",
@@ -2621,6 +2633,62 @@
     "plt.ylabel('features', fontsize=12)\n",
     "plt.savefig('Features influencing Sale Price most (Lasso).png');"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "overallqual_totalsf     45799.916287\n",
+       "totrmsabvgrd             6275.233747\n",
+       "saletype_New             5732.033614\n",
+       "overallcond              5426.370717\n",
+       "lotarea                  5218.532170\n",
+       "neighborhood_NridgHt     5169.498100\n",
+       "neighborhood_StoneBr     4610.895115\n",
+       "kitchenqual              4408.240735\n",
+       "masvnrarea               4136.262034\n",
+       "exterqual                4082.160810\n",
+       "neighborhood_Crawfor     3639.561334\n",
+       "total_porch_sf           3334.304974\n",
+       "bsmtexposure             3216.211254\n",
+       "total_bathrooms          3069.648655\n",
+       "functional               2829.782048\n",
+       "exterior1st_BrkFace      2748.796881\n",
+       "landcontour_HLS          2747.158191\n",
+       "bsmtfinsf1               2723.365703\n",
+       "neighborhood_NoRidge     2664.377183\n",
+       "garagearea               2565.083594\n",
+       "roofmatl_WdShngl         1980.565162\n",
+       "lotfrontage              1542.090047\n",
+       "bsmtcond                -2126.874743\n",
+       "bedroomabvgr            -2352.300910\n",
+       "mssubclass_120          -2988.413331\n",
+       "kitchenabvgr            -3552.308010\n",
+       "masvnrtype_BrkFace      -3570.199806\n",
+       "bsmtunfsf               -6189.441375\n",
+       "houseage                -8908.360250\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(lasso_opt_fin.coef_, index=final_features.columns).sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2640,6 +2708,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
